--- a/WPF.WindowsManager.Demo/MainWindow.xaml
+++ b/WPF.WindowsManager.Demo/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPF.WindowsManager.Test.MainWindow"
+﻿<Window x:Class="WPF.WindowsManager.Demo.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:windowsManager="clr-namespace:WPF.WindowsManager;assembly=WPF.WindowsManager"
