--- a/WPF.WindowsManager.Demo/Views/SubWindow.xaml
+++ b/WPF.WindowsManager.Demo/Views/SubWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="WPF.WindowsManager.Test.Views.SubWindow"
+﻿<Window x:Class="WPF.WindowsManager.Demo.Views.SubWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:windowsManager="clr-namespace:WPF.WindowsManager;assembly=WPF.WindowsManager"
